fix(ui): SummaryItem - adjust spacing

--- a/packages/ui/src/components/summary-item/summary-item.module.css
+++ b/packages/ui/src/components/summary-item/summary-item.module.css
@@ -6,6 +6,11 @@
   white-space: nowrap;
 }
 
+.titleIcon {
+  margin-top: -4px !important;
+  margin-bottom: -4px !important;
+}
+
 .currentMetric {
   color: var(--color-heading);
   font-size: var(--size-large);
